--- a/WebSalesMVC/appsettings.json
+++ b/WebSalesMVC/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebSalesMVCContext": "Server=(localdb)\\mssqllocaldb;Database=WebSalesMVCContext-7389bd16-4474-4734-b8fd-21220f705d56;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
