String de Conexão, Acesso a Dados, telas de de Crud para departamento

--- a/WebSalesMVC/appsettings.json
+++ b/WebSalesMVC/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebSalesMVCContext": "Server=(localdb)\\mssqllocaldb;Database=WebSalesMVCContext-7389bd16-4474-4734-b8fd-21220f705d56;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "WebSalesMVCContext": "Server=127.0.0.1,14033\\sql1;Database=WebSalesMVCappdb;User Id=sa;Password=@Darkines98196854@;MultipleActiveResultSets=true"
   }
 }
